examples/negative/stage1_rejections/impl_decl.kai
# Negative fixture (#511 / stage1 rejection): `impl` is
# stage-2-only. kaic1 must reject cleanly.

impl Show for Int {
  fn show(x: Int) : String = "x"
}

fn main() : Int = 0
